# snake_linux

./: Board.cpp  Board.hpp  CMakeLists.txt  COORD.hpp  Food.cpp  Food.hpp  GlobalValues.hpp  Player.cpp  Player.hpp  README.md  main.cpp  termio.cpp
